added new features

--- a/Full website/index.html
+++ b/Full website/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RoboTech - Advanced Robotics Control Platform</title>
+    <title>Techligence - Advanced Robotics Control Platform</title>
     <meta
       name="description"
       content="Control robots with hand gestures using our advanced 3D visualization and MediaPipe integration"
